src/app/dashboard/applications/components/application-card/application-card.component.scss
@use 'sass:map';
@use 'mixins';
@use 'palette';
@use 'variables';

:host {
  display: flex;
  flex-direction: column;
  gap: 8px;
  padding: 16px;
  background-color: var(--color-canvas);
  border: 2px solid var(--color-border);
  border-radius: variables.$border-radius;

  &:hover {
    background-color: transparent;
    cursor: grab;
  }

  &:focus {
    outline: none;

    @each $key in map-keys(palette.$at-palette-keys) {
      &.#{$key} {
        border: 2px solid map.get(palette.$at-palette, $key);
      }
    }
  }
}

.at-application-card-title {
  @include mixins.font-size(18px);

  font-weight: variables.$font-weight-bold;
}

.at-application-card-icon-subtitle {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 6px;
  color: var(--color-muted);
  font-weight: variables.$font-weight-semi-bold;
}

.at-application-card-icon {
  display: inline-flex;
  align-items: center;
  width: auto;
  height: 20px;
  font-size: 16px;

  // font-variation-settings: 'FILL' 0, 'wght' 500, 'GRAD' 0, 'opsz' 16;
}

.at-application-card-date-text {
  @include mixins.font-size(12px);

  color: var(--color-subtle);
  font-weight: variables.$font-weight-regular;
}

